challenge8/db_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    tier: backend
spec:
  type: NodePort
  ports:
  - port: 6379
    targetPort: 6379 
  selector:
    app: redis
    tier: backend
